WIP: grouped clsr

--- a/feature_classification.ipynb
+++ b/feature_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,16 +36,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(torch.Size([13832, 3200]), torch.Size([13832]))"
+       "(torch.Size([13832, 3200]), torch.Size([13832]), torch.Size([1258712]))"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,37 +57,42 @@
     "\n",
     "X_e = torch.from_numpy(ds['features']).to(device=DEVICE)\n",
     "y = torch.from_numpy(ds['gender']).to(device=DEVICE).float()\n",
-    "X_e.shape, y.shape"
+    "groups = ds['subject_ids'].to(device=DEVICE)\n",
+    "X_e.shape, y.shape, groups.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(tensor(0.5000), tensor(0.4983), tensor(0.5039))"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "Found input variables with inconsistent numbers of samples: [13832, 13832, 1258712]",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m DO_GROUPED_SHUFFLE:\n\u001b[32m      4\u001b[39m     group_shuffle = GroupShuffleSplit(n_splits=\u001b[32m1\u001b[39m, test_size=\u001b[32m0.3\u001b[39m, random_state=\u001b[32m1\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m     train_idx, val_idx = \u001b[38;5;28;43mnext\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mgroup_shuffle\u001b[49m\u001b[43m.\u001b[49m\u001b[43msplit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_e\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgroups\u001b[49m\u001b[43m=\u001b[49m\u001b[43mgroups\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m      7\u001b[39m     random_shuffle = ShuffleSplit(n_splits=\u001b[32m1\u001b[39m, test_size=\u001b[32m0.3\u001b[39m, random_state=\u001b[32m1\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/workspace/CBraMod-benchmark/.venv/lib/python3.13/site-packages/sklearn/model_selection/_split.py:1908\u001b[39m, in \u001b[36mBaseShuffleSplit.split\u001b[39m\u001b[34m(self, X, y, groups)\u001b[39m\n\u001b[32m   1878\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34msplit\u001b[39m(\u001b[38;5;28mself\u001b[39m, X, y=\u001b[38;5;28;01mNone\u001b[39;00m, groups=\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[32m   1879\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Generate indices to split data into training and test set.\u001b[39;00m\n\u001b[32m   1880\u001b[39m \n\u001b[32m   1881\u001b[39m \u001b[33;03m    Parameters\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m   1906\u001b[39m \u001b[33;03m    to an integer.\u001b[39;00m\n\u001b[32m   1907\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1908\u001b[39m     X, y, groups = \u001b[43mindexable\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgroups\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1909\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m train, test \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m._iter_indices(X, y, groups):\n\u001b[32m   1910\u001b[39m         \u001b[38;5;28;01myield\u001b[39;00m train, test\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/workspace/CBraMod-benchmark/.venv/lib/python3.13/site-packages/sklearn/utils/validation.py:532\u001b[39m, in \u001b[36mindexable\u001b[39m\u001b[34m(*iterables)\u001b[39m\n\u001b[32m    502\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"Make arrays indexable for cross-validation.\u001b[39;00m\n\u001b[32m    503\u001b[39m \n\u001b[32m    504\u001b[39m \u001b[33;03mChecks consistent length, passes through None, and ensures that everything\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    528\u001b[39m \u001b[33;03m[[1, 2, 3], array([2, 3, 4]), None, <...Sparse...dtype 'int64'...shape (3, 1)>]\u001b[39;00m\n\u001b[32m    529\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    531\u001b[39m result = [_make_indexable(X) \u001b[38;5;28;01mfor\u001b[39;00m X \u001b[38;5;129;01min\u001b[39;00m iterables]\n\u001b[32m--> \u001b[39m\u001b[32m532\u001b[39m \u001b[43mcheck_consistent_length\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43mresult\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    533\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/workspace/CBraMod-benchmark/.venv/lib/python3.13/site-packages/sklearn/utils/validation.py:475\u001b[39m, in \u001b[36mcheck_consistent_length\u001b[39m\u001b[34m(*arrays)\u001b[39m\n\u001b[32m    473\u001b[39m uniques = np.unique(lengths)\n\u001b[32m    474\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(uniques) > \u001b[32m1\u001b[39m:\n\u001b[32m--> \u001b[39m\u001b[32m475\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    476\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mFound input variables with inconsistent numbers of samples: \u001b[39m\u001b[38;5;132;01m%r\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m    477\u001b[39m         % [\u001b[38;5;28mint\u001b[39m(l) \u001b[38;5;28;01mfor\u001b[39;00m l \u001b[38;5;129;01min\u001b[39;00m lengths]\n\u001b[32m    478\u001b[39m     )\n",
+      "\u001b[31mValueError\u001b[39m: Found input variables with inconsistent numbers of samples: [13832, 13832, 1258712]"
+     ]
     }
    ],
    "source": [
     "# SPLIT\n",
     "\n",
-    "# if DO_GROUPED_SHUFFLE:\n",
-    "#     group_shuffle = GroupShuffleSplit(n_splits=1, test_size=0.3, random_state=1)\n",
-    "#     # train_idx, val_idx = next(group_shuffle.split(X_e, y, groups=groups))\n",
-    "# else:\n",
-    "#     random_shuffle = ShuffleSplit(n_splits=1, test_size=0.3, random_state=1)\n",
-    "#     train_idx, val_idx = next(random_shuffle.split(X_e, y))\n",
+    "if DO_GROUPED_SHUFFLE:\n",
+    "    group_shuffle = GroupShuffleSplit(n_splits=1, test_size=0.3, random_state=1)\n",
+    "    train_idx, val_idx = next(group_shuffle.split(X_e, y, groups=groups))\n",
+    "else:\n",
+    "    random_shuffle = ShuffleSplit(n_splits=1, test_size=0.3, random_state=1)\n",
+    "    train_idx, val_idx = next(random_shuffle.split(X_e, y))\n",
     "\n",
-    "random_shuffle = ShuffleSplit(n_splits=1, test_size=0.3, random_state=1)\n",
-    "train_idx, val_idx = next(random_shuffle.split(X_e, y))\n",
+    "# random_shuffle = ShuffleSplit(n_splits=1, test_size=0.3, random_state=1)\n",
+    "# train_idx, val_idx = next(random_shuffle.split(X_e, y))\n",
     "\n",
     "\n",
     "y.mean(), y[train_idx].mean(), y[val_idx].mean()"
