extract and save features in batch due to memory constrains

--- a/notebooks/Classification Pipline.ipynb
+++ b/notebooks/Classification Pipline.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "682090f1",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "id": "98e5a687",
    "metadata": {},
    "outputs": [],
@@ -180,7 +180,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 64,
+   "id": "abca6fb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nan\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/pn/qy0qc5tx7t7_97xjmy6pvksc0000gn/T/ipykernel_5283/2045314366.py:1: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  if np.isnan(hypnotizability[2]):\n"
+     ]
+    }
+   ],
+   "source": [
+    "if np.isnan(hypnotizability[2]):\n",
+    "    print('nan')\n",
+    "else:\n",
+    "    print('not nan')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f2c83df0",
    "metadata": {},
    "outputs": [],
@@ -196,7 +225,7 @@
     "        all_segments.append(segment)\n",
     "        subject_ids.append(subj_idx)\n",
     "        gender_of_epoch.append(gender[subj_idx])\n",
-    "        hypnotizablity_of_epoch.append(int(hypnotizability[subj_idx]))\n",
+    "        hypnotizablity_of_epoch.append(hypnotizability[subj_idx])\n",
     "        epoch_ids.append(epoch_idx)\n",
     "\n",
     "# Step 2: Convert list to array\n",
@@ -216,12 +245,33 @@
     "    attrs={'gender': gender_of_epoch,\n",
     "           'hypnotizablity': hypnotizablity_of_epoch},\n",
     "    name=\"eeg\"\n",
-    ")"
+    ")\n",
+    "\n",
+    "# save\n",
+    "# data.to_netcdf('data/OTKA_preprocessed_for_Cbramod.nc5', engine='h5netcdf')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fd62ea3",
+   "metadata": {},
+   "source": [
+    "## Feature extraction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
+   "id": "30e81363",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = xr.open_dataarray('data/OTKA_experimentsEEG4Cbramod.nc5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "339ecbdc",
    "metadata": {},
    "outputs": [],
@@ -239,8 +289,7 @@
     "    \"device\": 'cpu',\n",
     "\n",
     "    \"data_dir\": \"data/LEMON/\",\n",
-    "    \"channels\": ['Fp1', 'Fp2', 'F7', 'F3', 'Fz', 'F4', 'F8', 'T7', 'C3',\n",
-    "                 'Cz', 'C4', 'T8', 'P7', 'P3', 'Pz', 'P4', 'P8', 'O1', 'O2'],\n",
+    "    \"channels\": ['Fp1', 'Fp2', 'F3', 'F4', 'C3', 'C4', 'P3', 'P4', 'O1', 'O2', 'F7', 'F8', 'T7', 'T8', 'P7', 'P8', 'Fz', 'Cz', 'Pz'],\n",
     "    \"downstream_task\": \"gender\",\n",
     "    \"segment_size\": 30,  # TODO\n",
     "    \"batch_size\": 1024,\n",
@@ -253,16 +302,8 @@
     "DEFAULT_PARAMS.features_file_path = DEFAULT_PARAMS.features_file_path.replace(\n",
     "    \"<DOWNSTREAM_TASK>\", DEFAULT_PARAMS.downstream_task.lower())\n",
     "\n",
-    "params = DEFAULT_PARAMS"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "da0dda44",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "params = DEFAULT_PARAMS\n",
+    "\n",
     "x = torch.tensor(data.to_numpy()).float()"
    ]
   },
@@ -271,9 +312,20 @@
    "execution_count": null,
    "id": "50740ba7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 15/15 [01:49<00:00,  7.29s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "# feature extraction\n",
+    "batch_size = 50  # Adjust batch size based on available memory\n",
+    "num_batches = len(x) // batch_size + (1 if len(x) % batch_size != 0 else 0)\n",
+    "\n",
     "backbone = CBraMod(\n",
     "    in_dim=200, out_dim=200, d_model=200,\n",
     "    dim_feedforward=800, seq_len=30,\n",
@@ -283,21 +335,41 @@
     "backbone.load_state_dict(\n",
     "    torch.load(params.foundation_dir,\n",
     "                map_location=torch.device(params.device), weights_only=True))\n",
+    "\n",
+    "backbone.eval()\n",
     "backbone.proj_out = nn.Identity()\n",
     "\n",
+    "from tqdm import tqdm\n",
+    "for batch_idx in tqdm(range(num_batches), leave=True):\n",
+    "    start_idx = batch_idx * batch_size\n",
+    "    end_idx = min((batch_idx + 1) * batch_size, len(x))\n",
+    "    batch = x[start_idx:end_idx]\n",
+    "    bz, ch_num, seq_len, patch_size = batch.shape\n",
+    "    features = backbone(batch)\n",
+    "    features = Rearrange('b c s p -> b (c s p)')(features).contiguous()\n",
+    "    # store batch features\n",
+    "    torch.save(features.detach().numpy(),\n",
+    "        f\"data/OTKA_extracted_features/CBraMod_features_{batch_idx:02}.pt\")\n",
     "\n",
-    "bz, ch_num, seq_len, patch_size = x.shape\n",
-    "\n",
-    "features = backbone(x)  # TODO x\n",
-    "# features = Rearrange('b c s p -> b (c s p)')(features).contiguous()\n",
-    "# features = features.flatten(1)\n",
-    "# print(\"features.shape=\", features.shape)\n",
     "\n",
     "# # store features\n",
     "# torch.save({'features': features.detach().numpy(),\n",
     "#             'gender': ds.y,\n",
     "#             'subject_ids': ds.subject_ids}, params.features_file_path)\n",
     "# print(\"features saved to\", params.features_file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e10dea2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# open all the batch data, and concat them\n",
+    "subject_ids = [i.split('_')[0] for i in ds.subject_epoch.values]\n",
+    "gender = ds.gender\n",
+    "gender = [0 if i=='Female' else 1 for i in gender]"
    ]
   },
   {
