create and store a feature tensor extarcted from cbramod

--- a/notebooks/Classification Pipline.ipynb
+++ b/notebooks/Classification Pipline.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7e7d6056",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,8 @@
     "import xarray as xr\n",
     "from pathlib import Path\n",
     "from scipy.signal import resample, butter, sosfiltfilt, iirnotch, tf2sos\n",
-    "from IPython.display import clear_output"
+    "from IPython.display import clear_output\n",
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 77,
    "id": "e02fc402",
    "metadata": {},
    "outputs": [],
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 78,
    "id": "682090f1",
    "metadata": {},
    "outputs": [],
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "869461fd",
    "metadata": {},
    "outputs": [],
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "262b909d",
    "metadata": {},
    "outputs": [],
@@ -147,12 +148,15 @@
     "tasks = ['experience1', 'experience4']\n",
     "sub_52_data = process_subject_trials(eeg_path, subj, tasks)\n",
     "\n",
-    "all_eeg_data.append(sub_52_data)"
+    "all_eeg_data.append(sub_52_data)\n",
+    "\n",
+    "# update subjects ids accordingly \n",
+    "subjects = [f'{i:02}' for i in range(1, 53)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 81,
    "id": "98e5a687",
    "metadata": {},
    "outputs": [],
@@ -180,36 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "abca6fb3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "nan\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/pn/qy0qc5tx7t7_97xjmy6pvksc0000gn/T/ipykernel_5283/2045314366.py:1: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  if np.isnan(hypnotizability[2]):\n"
-     ]
-    }
-   ],
-   "source": [
-    "if np.isnan(hypnotizability[2]):\n",
-    "    print('nan')\n",
-    "else:\n",
-    "    print('not nan')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "id": "f2c83df0",
    "metadata": {},
    "outputs": [],
@@ -261,17 +236,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "30e81363",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = xr.open_dataarray('data/OTKA_experimentsEEG4Cbramod.nc5')"
+    "ds = xr.open_dataarray('data/OTKA_preprocessed_for_Cbramod.nc5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "339ecbdc",
    "metadata": {},
    "outputs": [],
@@ -284,7 +259,7 @@
     "\n",
     "DEFAULT_PARAMS = Namespace(**{\n",
     "    \"foundation_dir\": \"pretrained_weights/pretrained_weights.pth\",\n",
-    "    \"features_file_path\": \"data/LEMON/CBraMod_features_<DOWNSTREAM_TASK>.pt\",\n",
+    "    \"features_file_path\": \"data/CBraMod_features_<DOWNSTREAM_TASK>.pt\",\n",
     "    \"num_of_classes\": 2,\n",
     "    \"device\": 'cpu',\n",
     "\n",
@@ -304,7 +279,7 @@
     "\n",
     "params = DEFAULT_PARAMS\n",
     "\n",
-    "x = torch.tensor(data.to_numpy()).float()"
+    "x = torch.tensor(ds.to_numpy()).float()"
    ]
   },
   {
@@ -317,7 +292,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [01:49<00:00,  7.29s/it]\n"
+      "100%|██████████| 15/15 [01:45<00:00,  7.01s/it]\n"
      ]
     }
    ],
@@ -339,7 +314,6 @@
     "backbone.eval()\n",
     "backbone.proj_out = nn.Identity()\n",
     "\n",
-    "from tqdm import tqdm\n",
     "for batch_idx in tqdm(range(num_batches), leave=True):\n",
     "    start_idx = batch_idx * batch_size\n",
     "    end_idx = min((batch_idx + 1) * batch_size, len(x))\n",
@@ -348,20 +322,29 @@
     "    features = backbone(batch)\n",
     "    features = Rearrange('b c s p -> b (c s p)')(features).contiguous()\n",
     "    # store batch features\n",
-    "    torch.save(features.detach().numpy(),\n",
-    "        f\"data/OTKA_extracted_features/CBraMod_features_{batch_idx:02}.pt\")\n",
-    "\n",
-    "\n",
-    "# # store features\n",
-    "# torch.save({'features': features.detach().numpy(),\n",
-    "#             'gender': ds.y,\n",
-    "#             'subject_ids': ds.subject_ids}, params.features_file_path)\n",
-    "# print(\"features saved to\", params.features_file_path)"
+    "    torch.save(features.detach(),\n",
+    "               f\"data/OTKA_extracted_features/CBraMod_features_{batch_idx:02}.pt\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "id": "a287e3ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_features = torch.zeros((x.shape[0], features.shape[1]))\n",
+    "batch_size = 50\n",
+    "for i, path_dir in enumerate(sorted(Path('data/OTKA_extracted_features/').glob('*.pt'))):\n",
+    "    start_idx = i * batch_size\n",
+    "    end_idx = min((i + 1) * batch_size, len(x))\n",
+    "    feature = torch.load(path_dir, weights_only=True)\n",
+    "    all_features[start_idx:end_idx] = feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "e10dea2f",
    "metadata": {},
    "outputs": [],
@@ -370,6 +353,28 @@
     "subject_ids = [i.split('_')[0] for i in ds.subject_epoch.values]\n",
     "gender = ds.gender\n",
     "gender = [0 if i=='Female' else 1 for i in gender]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "4a875264",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "features saved to data/LEMON/CBraMod_features_gender.pt\n"
+     ]
+    }
+   ],
+   "source": [
+    "# store all features\n",
+    "torch.save({'features': all_features,\n",
+    "            'gender': gender,\n",
+    "            'subject_ids': subject_ids}, params.features_file_path)\n",
+    "print(\"features saved to\", params.features_file_path)"
    ]
   },
   {
