implement data preprocessing for downstream task

--- a/notebooks/Classification Pipline.ipynb
+++ b/notebooks/Classification Pipline.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 45,
    "id": "e02fc402",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,9 @@
     "                  resampling_frq=200,\n",
     "                  notchfilter_frq=50,\n",
     "                  filter_bounds=[0.3, 75],\n",
-    "                  verbose=False):\n",
+    "                  verbose=False,\n",
+    "                  microvolts=False,\n",
+    "                  pretrain=False):\n",
     "\n",
     "    # open data\n",
     "    print(f'>>>>>>>>preprocessing {subject}-{task}')\n",
@@ -81,11 +83,21 @@
     "\n",
     "    raw.filter(l_freq=filter_bounds[0], h_freq=filter_bounds[1], verbose=verbose)\n",
     "    raw.notch_filter((notchfilter_frq), verbose=verbose)\n",
-    "    eeg_array = raw.get_data().T * 10**6  # volts to microvolts\n",
+    "    eeg_array = raw.get_data().T\n",
     "    points, chs = eeg_array.shape\n",
-    "    a = points % (30 * 200)\n",
-    "    eeg_array = eeg_array[60 * 200:-(a+60 * 200), :]\n",
-    "    eeg_array = eeg_array.reshape(-1, 30, 200, chs)\n",
+    "    if microvolts:\n",
+    "        eeg_array = eeg_array * 10**6\n",
+    "    \n",
+    "    if pretrain:  # pretrain mode follows their pretraining's preprocessing steps\n",
+    "        a = points % (30 * 200)\n",
+    "        eeg_array = eeg_array[60 * 200:-(a+60 * 200), :]\n",
+    "        eeg_array = eeg_array.reshape(-1, 30, 200, chs)\n",
+    "    \n",
+    "    else:\n",
+    "        eeg_array = eeg_array[:200*416, :]  # trim time dim so that it is dividable by 200 (time is just a few timepoints longer than this)\n",
+    "        eeg_array = eeg_array.reshape(-1, 2, 200, chs)\n",
+    "        eeg_array = eeg_array.reshape(-1, 2, 200, chs)\n",
+    "\n",
     "    eeg_array = eeg_array.transpose(0, 3, 1, 2)\n",
     "\n",
     "    return eeg_array"
@@ -93,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 38,
    "id": "682090f1",
    "metadata": {},
    "outputs": [],
@@ -111,14 +123,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "869461fd",
    "metadata": {},
    "outputs": [],
    "source": [
+    "PRETRAIN = False\n",
     "subjects = [f'{i:02}' for i in range(1, 52)]\n",
     "tasks = ['experience1', 'experience2', 'experience3', 'experience4']\n",
-    "channels = ['Fp1', 'Fp2', 'F3', 'F4', 'C3', 'C4', 'P3', 'P4', 'O1', 'O2', 'F7', 'F8', 'T7', 'T8', 'P7', 'P8', 'Fz', 'Cz', 'Pz']\n",
+    "if PRETRAIN:\n",
+    "    channels = ['Fp1', 'Fp2', 'F3', 'F4', 'C3', 'C4', 'P3', 'P4', 'O1', 'O2', 'F7', 'F8', 'T7', 'T8', 'P7', 'P8', 'Fz', 'Cz', 'Pz']\n",
+    "else:\n",
+    "    channels = ['O1', 'O2', 'P1', 'P2', 'C1', 'C2', 'F1', 'F2']\n",
     "\n",
     "def load_trial(path, subj, task):\n",
     "    eeg_data = process_input(\n",
@@ -126,7 +142,8 @@
     "        subject=subj,\n",
     "        task=task,\n",
     "        channels=channels,\n",
-    "        verbose=0\n",
+    "        verbose=0,\n",
+    "        pretrain=PRETRAIN\n",
     "    )\n",
     "    return eeg_data\n",
     "\n",
@@ -140,92 +157,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "262b909d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Two sessions are missing in the Last participants' data so we process and append it separately\n",
-    "subj = '52'\n",
-    "tasks = ['experience1', 'experience4']\n",
-    "sub_52_data = process_subject_trials(eeg_path, subj, tasks)\n",
+    "if PRETRAIN:  # since appending this data will create inhomogenous dimension we will remove it in the test mode\n",
+    "    # Two sessions are missing in the Last participants' data so we process and append it separately\n",
+    "    subj = '52'\n",
+    "    tasks = ['experience1', 'experience4']\n",
+    "    sub_52_data = process_subject_trials(eeg_path, subj, tasks)\n",
     "\n",
-    "all_eeg_data.append(sub_52_data)\n",
+    "    all_eeg_data.append(sub_52_data)\n",
     "\n",
-    "# update subjects ids accordingly \n",
-    "subjects = [f'{i:02}' for i in range(1, 53)]"
+    "    # update subjects ids accordingly \n",
+    "    subjects = [f'{i:02}' for i in range(1, 53)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "98e5a687",
    "metadata": {},
    "outputs": [],
    "source": [
-    "segments_to_be_excluded = {}\n",
+    "if PRETRAIN:\n",
+    "    segments_to_be_excluded = {}\n",
     "\n",
-    "for sub in range(len(all_eeg_data)):\n",
-    "    sample_key = []\n",
-    "    for i, sample, in enumerate(all_eeg_data[sub]):\n",
-    "        if np.max(np.abs(sample)) > 100:\n",
-    "            sample_key.append(i)\n",
-    "    segments_to_be_excluded[f'sub_{sub}'] = sample_key\n",
+    "    for sub in range(len(all_eeg_data)):\n",
+    "        sample_key = []\n",
+    "        for i, sample, in enumerate(all_eeg_data[sub]):\n",
+    "            if np.max(np.abs(sample)) > 100:\n",
+    "                sample_key.append(i)\n",
+    "        segments_to_be_excluded[f'sub_{sub}'] = sample_key\n",
     "\n",
-    "# exclude bad epochs\n",
-    "filtered_x = []\n",
+    "    # exclude bad epochs\n",
+    "    filtered_x = []\n",
     "\n",
-    "for sub in range(len(all_eeg_data)):\n",
-    "    excluded_segments = segments_to_be_excluded[f'sub_{sub}']\n",
-    "    filtered_sub = np.delete(all_eeg_data[sub], excluded_segments, axis=0)  # Remove excluded segments\n",
-    "    filtered_x.append(filtered_sub)\n",
+    "    for sub in range(len(all_eeg_data)):\n",
+    "        excluded_segments = segments_to_be_excluded[f'sub_{sub}']\n",
+    "        filtered_sub = np.delete(all_eeg_data[sub], excluded_segments, axis=0)  # Remove excluded segments\n",
+    "        filtered_x.append(filtered_sub)\n",
     "\n",
-    "# Convert the filtered list back to a numpy array\n",
-    "x = np.array(filtered_x, dtype=object)"
+    "    # Convert the filtered list back to a numpy array\n",
+    "    x = np.array(filtered_x, dtype=object)\n",
+    "\n",
+    "    all_segments = []\n",
+    "    subject_ids = []\n",
+    "    epoch_ids = []\n",
+    "    gender_of_epoch = []\n",
+    "    hypnotizablity_of_epoch = []\n",
+    "\n",
+    "    for subj_idx, subj_array in zip(subjects, x):\n",
+    "        for epoch_idx, segment in enumerate(subj_array):\n",
+    "            all_segments.append(segment)\n",
+    "            subject_ids.append(subj_idx)\n",
+    "            gender_of_epoch.append(gender[subj_idx])\n",
+    "            hypnotizablity_of_epoch.append(hypnotizability[subj_idx])\n",
+    "            epoch_ids.append(epoch_idx)\n",
+    "\n",
+    "    # Step 2: Convert list to array\n",
+    "    all_segments = np.stack(all_segments)  # shape (total_epochs, 30, 128)\n",
+    "\n",
+    "    subject_epoch = [f'{sub_id}_epoch-{epo_id}' for sub_id, epo_id in zip(subject_ids, epoch_ids)]\n",
+    "\n",
+    "    data = xr.DataArray(\n",
+    "        all_segments,\n",
+    "        dims=(\"subject_epoch\", \"channel\", \"segment\", \"time\"),\n",
+    "        coords={\n",
+    "            \"subject_epoch\": subject_epoch,\n",
+    "            \"channel\": channels,\n",
+    "            \"segment\": np.arange(all_segments.shape[2]),\n",
+    "            \"time\": np.arange(all_segments.shape[3]),\n",
+    "        },\n",
+    "        attrs={'gender': gender_of_epoch,\n",
+    "            'hypnotizablity': hypnotizablity_of_epoch},\n",
+    "        name=\"eeg\"\n",
+    "    )\n",
+    "\n",
+    "    # save\n",
+    "    # data.to_netcdf('data/OTKA_preprocessed_for_Cbramod.nc5', engine='h5netcdf')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "f2c83df0",
+   "execution_count": null,
+   "id": "543556ad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_segments = []\n",
-    "subject_ids = []\n",
-    "epoch_ids = []\n",
-    "gender_of_epoch = []\n",
-    "hypnotizablity_of_epoch = []\n",
+    "if not PRETRAIN:\n",
+    "    all_segments = np.array(all_eeg_data)\n",
     "\n",
-    "for subj_idx, subj_array in zip(subjects, x):\n",
-    "    for epoch_idx, segment in enumerate(subj_array):\n",
-    "        all_segments.append(segment)\n",
-    "        subject_ids.append(subj_idx)\n",
-    "        gender_of_epoch.append(gender[subj_idx])\n",
-    "        hypnotizablity_of_epoch.append(hypnotizability[subj_idx])\n",
-    "        epoch_ids.append(epoch_idx)\n",
+    "    # removing last participant's data\n",
+    "    hypnotizability_ = hypnotizability.iloc[:-1].values\n",
+    "    gender_ = gender.iloc[:-1].values\n",
     "\n",
-    "# Step 2: Convert list to array\n",
-    "all_segments = np.stack(all_segments)  # shape (total_epochs, 30, 128)\n",
+    "    data = xr.DataArray(\n",
+    "        all_segments,\n",
+    "        dims=(\"subject\", \"epoch\", \"channel\", \"segment\", \"time\"),\n",
+    "        coords={\n",
+    "            \"subject\": subjects,\n",
+    "            \"epoch\": np.arange(all_segments.shape[1]),\n",
+    "            \"channel\": channels,\n",
+    "            \"segment\": np.arange(all_segments.shape[3]),\n",
+    "            \"time\": np.arange(all_segments.shape[4]),\n",
+    "        },\n",
+    "        attrs={'gender': gender_,\n",
+    "            'hypnotizablity': hypnotizability_},\n",
+    "        name=\"eeg\"\n",
+    "    )\n",
     "\n",
-    "subject_epoch = [f'{sub_id}_epoch-{epo_id}' for sub_id, epo_id in zip(subject_ids, epoch_ids)]\n",
-    "\n",
-    "data = xr.DataArray(\n",
-    "    all_segments,\n",
-    "    dims=(\"subject_epoch\", \"channel\", \"segment\", \"time\"),\n",
-    "    coords={\n",
-    "        \"subject_epoch\": subject_epoch,\n",
-    "        \"channel\": channels,\n",
-    "        \"segment\": np.arange(all_segments.shape[2]),\n",
-    "        \"time\": np.arange(all_segments.shape[3]),\n",
-    "    },\n",
-    "    attrs={'gender': gender_of_epoch,\n",
-    "           'hypnotizablity': hypnotizablity_of_epoch},\n",
-    "    name=\"eeg\"\n",
-    ")\n",
-    "\n",
-    "# save\n",
-    "# data.to_netcdf('data/OTKA_preprocessed_for_Cbramod.nc5', engine='h5netcdf')"
+    "    # data.to_netcdf('data/OTKA_preprocessed_for_Cbramod_downstream.nc5', engine='h5netcdf')"
    ]
   },
   {
@@ -389,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "d1e36179",
    "metadata": {},
    "outputs": [
@@ -397,14 +440,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/pn/qy0qc5tx7t7_97xjmy6pvksc0000gn/T/ipykernel_16912/3115144644.py:4: DeprecationWarning: __array__ implementation doesn't accept a copy keyword, so passing copy=False failed. __array__ must implement 'dtype' and 'copy' keyword arguments.\n",
+      "/var/folders/pn/qy0qc5tx7t7_97xjmy6pvksc0000gn/T/ipykernel_18660/2302037879.py:4: DeprecationWarning: __array__ implementation doesn't accept a copy keyword, so passing copy=False failed. __array__ must implement 'dtype' and 'copy' keyword arguments.\n",
       "  X_e = np.array(data['features'])\n"
      ]
     }
    ],
    "source": [
     "import torch\n",
-    "DO_DOWN_SAMPLE = True\n",
+    "DO_DOWN_SAMPLE = False\n",
     "data = torch.load('data/OTKA_extracted_features/CBraMod_features_gender.pt', weights_only=True)\n",
     "X_e = np.array(data['features'])\n",
     "y = np.array(data['gender'])\n",
